@@ -3,11 +3,8 @@
   <record id="1" aka="AAAAAAAAAAE=">
     <pickle>
       <tuple>
-        <tuple>
-          <string>Products.PythonScripts.PythonScript</string>
-          <string>PythonScript</string>
-        </tuple>
-        <none/>
+        <global name="PythonScript" module="Products.PythonScripts.PythonScript"/>
+        <tuple/>
       </tuple>
     </pickle>
     <pickle>
@@ -68,17 +65,15 @@
         </item>
         <item>
             <key> <string>_body</string> </key>
-            <value> <string encoding="cdata"><![CDATA[
-
-# Updates attributes of an Zope document\n
+            <value> <string># Updates attributes of an Zope document\n
 # which is in a class inheriting from ERP5 Base\n
 #\n
 # TODO\n
 #   - Implement validation of matrix fields\n
 #   - Implement validation of list fields\n
 #\n
-\n
 from Products.Formulator.Errors import ValidationError, FormValidationError\n
+from ZTUtils import make_query\n
 \n
 request=context.REQUEST\n
 \n
@@ -121,24 +116,28 @@ except FormValidationError, validation_errors:\n
   return form(request)\n
 else:\n
   if not selection_index:\n
-    redirect_url = \'%s/%s?%s\' % ( context.absolute_url()\n
-                              , form_id\n
-                              , \'portal_status_message=Data+Updated.\'\n
-                              )\n
+    redirect_url = \'%s/%s?%s\' % (\n
+      context.absolute_url(),\n
+      form_id,\n
+      make_query({\'ignore_layout\':ignore_layout,\n
+                  \'editable_mode\':editable_mode,\n
+                  \'portal_status_message\':\'Data Updated.\',\n
+                  })\n
+      )\n
   else:\n
-    redirect_url = \'%s/%s?selection_index=%s&selection_name=%s&%s\' % ( context.absolute_url()\n
-                              , form_id\n
-                              , selection_index\n
-                              , selection_name\n
-                              , \'portal_status_message=Data+Updated.\'\n
-                              )\n
-\n
-\n
+    redirect_url = \'%s/%s?%s\' % (\n
+      context.absolute_url(),\n
+      form_id,\n
+      make_query({\'selection_index\':selection_index,\n
+                  \'selection_name\':selection_name,\n
+                  \'ignore_layout\':ignore_layout,\n
+                  \'editable_mode\':editable_mode,\n
+                  \'portal_status_message\':\'Data Updated.\',\n
+                  })\n
+      )\n
 \n
 request[ \'RESPONSE\' ].redirect( redirect_url )\n
-
-
-]]></string> </value>
+</string> </value>
         </item>
         <item>
             <key> <string>_code</string> </key>
@@ -188,6 +187,8 @@ request[ \'RESPONSE\' ].redirect( redirect_url )\n
                             <string>Products.Formulator.Errors</string>
                             <string>ValidationError</string>
                             <string>FormValidationError</string>
+                            <string>ZTUtils</string>
+                            <string>make_query</string>
                             <string>_getattr_</string>
                             <string>context</string>
                             <string>request</string>
